# penguin

./: AGENTS.md  CLAUDE.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  bson_object_id.gemspec  penguin.gemspec
.github/workflows/: ci.yml
crates/object_id/: Cargo.toml
crates/object_id/benches/: object_id_generation.rs
crates/object_id/src/: lib.rs
ext/bson_object_id/: Cargo.toml  extconf.rb
ext/bson_object_id/src/: lib.rs
ext/penguin_object_id/: Cargo.toml  build.rs  extconf.rb
ext/penguin_object_id/benches/: object_id_generation.rs
ext/penguin_object_id/src/: lib.rs
lib/: bson_object_id.rb  penguin.rb
lib/bson_object_id/: version.rb
lib/penguin/: object_id.rb  version.rb
sig/: bson_object_id.rbs  penguin.rbs
sig/penguin/: object_id.rbs
specifications/: objectid.md
test/: bench_penguine_object_id.rb  test_bson_object_id.rb  test_helper.rb  test_penguin_object_id.rb
