[package]
name = "bson_object_id"
version = "0.1.0"
edition = "2021"
authors = ["Nick Spain <nicholas.spain@stileeducation.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.28"
magnus = { version = "0.8.1" }
rand = "0.9.2"
