[package]
name = "penguin_object_id"
version = "0.1.0"
edition = "2021"
authors = ["Nick Spain <nicholas.spain@stileeducation.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.8"
magnus = { version = "0.8.1" }
object_id = { path = "../../crates/object_id" }

